	  cl.exe's verbose output - now filtering *all* lines instead of first three
	* cobc.c [_MSC_VER]: rewritten (line_contains) for matching "special" names

2015-11-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.c (process) [_MSC_VER]: bugfix in output filter
	* cobc.c (process_run): enable -j to work on systems that need ".\", too

2015-10-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* scanner.l: maximum word-length always resulted in error if -W[all]
	  was set, now only raise an error if -frelax-syntax is not set and
	  raise a warning if both -frelax-syntax and -W[all] are active

2015-10-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.c: tweaked error messages, added possible values if invalid
	* config.c (cb_load_conf_file): if include file is not found prefix it
	  with path of current loaded configuration file

2015-08-30  Ron Norman

	* In tree.c, for binary operations between integer constants, resolve
	  the value at compile time and reduce the expression down to the
	  computed value

2015-08-19  Ron Norman

	* If -frelax-syntax then just give Warning when VALUEs in REDEFINES
	  instead of an error. Some legacy COBOL code can be doing this.

2015-08-19  Ron Norman

	* Swapped order of parameters for C compiler and Linking so that
	  -L options come before -l 
	  Otherwise the linker does not find things correctly on Linux

2015-07-07  Ron Norman

	* Added CB_DEVICE_PRINTER with a new value to differentiate between
	  PRINTER and SYSOUT. DISPLAY ... UPON PRINTER can be redirected via
	  the env var COBPRINTER similar to what Micro Focus supports
	  parser.y, typeck.c & tree.h changed for this in the compiler
	  termio.c, common.c changed in the runtime

2015-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: added TALLY special register (Wish List #34).

2015-07-02  Ron Norman

	* Fixes to tree.c, tree,h typeck.c field.c codegen.c to correctly