@@ -5927,7 +5927,7 @@ procedure_returning:
 		if (f->level != 1 && f->level != 77) {
 			cb_error (_("RETURNING item must have level 01"));
 		} else if(f->flag_occurs) {
-			cb_error(_("RETURNING item should not have OCCURS"));
+			cb_error (_("RETURNING item should not have OCCURS"));
 		} else if(f->storage == CB_STORAGE_LOCAL) {
 			cb_error (_("RETURNING item should not be in LOCAL-STORAGE"));
 		} else {
