@@ -23,7 +23,7 @@
 COB_BIGENDIAN="@COB_BIGENDIAN@"
 COB_HAS_ISAM="@COB_HAS_ISAM@"
 COB_HAS_CURSES="@COB_HAS_CURSES@"
-COB_HAS_UTC_OFFSET"@COB_HAS_UTC_OFFSET@"
+COB_HAS_UTC_OFFSET="@COB_HAS_UTC_OFFSET@"
 COBC="${abs_top_builddir}/cobc/cobc"
 COBCRUN="${abs_top_builddir}/bin/cobcrun"
 
