@@ -363,6 +363,11 @@
 	* cobc.c (process) [_MSC_VER]: bugfix in output filter
 	* cobc.c (process_run): enable -j to work on systems that need ".\", too
 
+2015-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c: added cb_unix_lf to enable possible output of generated files
+	  with unix lf (especially for listing files and testsuite)
+
 2015-10-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* scanner.l: maximum word-length always resulted in error if -W[all]
